[project]
name = "advancedmemoryagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lancedb>=0.30.2",
    "litellm>=1.83.4",
    "pandas>=3.0.2",
    "python-dotenv>=1.0.1",
    "torch>=2.11.0",
    "transformers>=5.5.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
]
